--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ h5 {
 }
 
 
+
+
 /* header
 ==================================================*/
 
@@ -1131,7 +1133,7 @@ textarea:focus {
 }
 
 
-/* single project page
+/* Portfolio Page & Blog
 ==================================================*/
 
 .cat-ul {
@@ -1144,6 +1146,45 @@ textarea:focus {
     color: #ffbf00;
 }
 
+
+/* Portfolio Page 
+==================================================*/
+
+.project-links a {
+    /*display: inline-block;*/
+    text-align: center;
+    text-decoration: none;
+}
+
+.tech i {
+    font-size: 30px;
+}
+
+
+
+.fab.fa-js-square {
+    color: yellow;
+}
+
+.fab.fa-html5 {
+    color: #DD4B25;
+}
+
+.fab.fa-css3-alt{
+color: #254BDD
+}
+
+.fab.fa-react {
+    color: teal;
+    font-size: 30px;
+}
+
+li .tech {
+    font-size: 30px;
+}
+
+/* Blog
+==================================================*/
 
 /* Responsive media queries
 ==================================================*/
