--- a/css/style.css
+++ b/css/style.css
@@ -1186,6 +1186,16 @@ li .tech {
 /* Blog
 ==================================================*/
 
+blockquote {
+   text-align: center;
+}
+
+.box a {
+    text-decoration: none;
+    color: #A2A2A2;
+    font-weight: bold;
+}
+
 /* Responsive media queries
 ==================================================*/
 
