--- a/css/style.css
+++ b/css/style.css
@@ -1196,6 +1196,9 @@ blockquote {
     font-weight: bold;
 }
 
+/* Blog Pages
+==================================================*/
+
 /* Responsive media queries
 ==================================================*/
 
